--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Calculadora Curso Javascript</h1>
-    <h2>Hola Renata Aliaga</h2>
+    <h2>Aliaga José Ignacio</h2>
     <div class="calculadora">
         <input type="text" id="pantalla" readonly>
         <br>
